xidlc/tests/snapshots/codegen_snapshot__rust__bitmask_def.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
bitmask_def.rs
===============
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
pub struct EmptyBitmask {
    pub value: u32,
}
impl EmptyBitmask {}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
pub struct SimpleBitmask {
    pub value: u32,
}
impl SimpleBitmask {
    pub const A: u32 = 1u32 << 0;
    pub const B: u32 = 1u32 << 1;
    pub const C: u32 = 1u32 << 2;
}
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
pub struct PositionedBitmask {
    pub value: u32,
}
impl PositionedBitmask {
    pub const A: u32 = 1u32 << 0;
    pub const B: u32 = 1u32 << 2;
    pub const C: u32 = 1u32 << 4;
}
