xidlc/tests/snapshots/codegen_snapshot__rust__bitset_def.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
bitset_def.rs
===============
// Code generated by xidlc-v0.71.0-snapshot. DO NOT EDIT.

#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct A {}
impl A {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct A {
    pub base: B,
}
impl A {}
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
#[derive(Default)]
pub struct A {
    pub base: B,
    pub a: bool,
    pub a: bool,
    pub b: bool,
    pub c: bool,
}
impl A {}
