xidlc/tests/snapshots/codegen_snapshot__rust__builtin_content_type.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
builtin_content_type.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[derive(
    Debug,
    Clone,
    PartialEq,
    ::serde::Serialize,
    ::serde::Deserialize,
    Copy,
    Eq,
    Default,
)]
pub enum ContentType {
    #[serde(rename = "application/json")]
    #[default]
    Json,
    #[serde(rename = "application/octet-stream")]
    OctetStream,
    #[serde(rename = "text/plain")]
    Text,
}
#[allow(non_snake_case)]
pub mod documents {
    #[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize)]
    #[derive(Default)]
    pub struct Metadata {
        pub title: String,
    }
    impl Metadata {}
    /// HTTP representation union: each case responds with its own media type
    /// and is untagged on the wire.
    #[derive(Debug, Clone, ::serde::Serialize, ::serde::Deserialize)]
    #[serde(untagged)]
    pub enum Payload {
        Json(Metadata),
        Text(String),
    }
}
