xidlc/tests/snapshots/codegen_snapshot__rust__const_binary.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_binary.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(non_upper_case_globals)]
pub const a: i32 = 2;
