xidlc/tests/snapshots/codegen_snapshot__rust__const_dec.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_dec.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(non_upper_case_globals)]
pub const a: i32 = 10;
