xidlc/tests/snapshots/codegen_snapshot__rust__const_hex.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_hex.rs
===============
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
pub const a: i32 = 255;
