xidlc/tests/snapshots/codegen_snapshot__rust__const_scoped_name.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_scoped_name.rs
===============
#![allow(unused_imports)]
#![allow(non_upper_case_globals)]
#![allow(non_snake_case)]
#![allow(unused_variables)]
#![allow(unreachable_patterns)]
pub const a: int = 0;
pub const a: u8 = 0;
pub const a: u16 = 0;
pub const a: u32 = 0;
pub const a: u64 = 0;
pub const a: i8 = 0;
pub const a: i16 = 0;
pub const a: i32 = 0;
pub const a: i64 = 0;
pub const a: char8 = 0;
pub const a: char16 = 0;
pub const C1: char = 'X';
pub const C2: char = 'X';
pub const C3: &'static str = "aaa";
pub const C3: &'static str = "aaa";
pub const C3: bool = r#false;
pub const a: ::A = 0;
pub const a: A::B = 0;
pub const a: A::B::C = 0;
pub const a: A::B::C::D::E::F = 0;
pub const MYSIZE: M::Size = M::medium;
pub const const_float: f64 = 13.1;
pub const const_double: f64 = 84.1;
pub const const_longdouble: f64 = 46.1;
