xidlc/tests/snapshots/codegen_snapshot__rust__enum_empty.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
enum_empty.rs
===============
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(Debug, Clone, PartialEq, ::serde::Serialize, ::serde::Deserialize, Copy, Eq)]
pub enum A {}
impl Default for A {
    fn default() -> Self {
        panic!("A has no variants")
    }
}
