xidlc/tests/snapshots/codegen_snapshot__rust__enum_serialize.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
enum_serialize.rs
===============
#[allow(unused_imports)]
#[allow(non_upper_case_globals)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unreachable_patterns)]
#[derive(
    ::serde::Serialize,
    ::serde::Deserialize,
    Debug,
    Clone,
    PartialEq,
    Copy,
    Eq,
    Default,
)]
pub enum Tag {
    #[default]
    A,
    B,
}
